Fix Android compatibility and release polish